# libwebsockets

./: .gitignore  CMakeLists-implied-options.txt  CMakeLists.txt  energy_feature.json
READMEs/: README.build.md  README.openhitls-pr2-review.md
cmake/: FindOpenHITLS.cmake  lws_config.h.in
include/: libwebsockets.h
include/libwebsockets/: lws-callbacks.h  lws-client.h  lws-context-vhost.h  lws-genaes.h  lws-gendtls.h  lws-genec.h  lws-genhash.h  lws-genrsa.h
lib/core/: context.c  private-lib-core.h
lib/core-net/: wsi.c
lib/misc/: base64-decode.c
lib/plat/unix/: unix-init.c
lib/plat/windows/: windows-init.c
lib/secure-streams/cpp/: lss.cxx
lib/tls/: CMakeLists.txt  private-lib-tls.h  tls-client.c  tls.c
lib/tls/bearssl/: bearssl-client.c  bearssl-server.c  bearssl-session.c  bearssl-ssl.c  bearssl-x509.c  private-lib-tls-bearssl.h
lib/tls/openhitls/: cipher-mapping.h  lws-genaes.c  lws-gencrypto.c  lws-genec.c  lws-genrsa.c  openhitls-client.c  openhitls-server.c  openhitls-session.c  openhitls-ssl.c  openhitls-tls.c  openhitls-x509.c  private.h
lib/tls/openssl/: openssl-x509.c
lib/tls/schannel/: schannel-x509.c
minimal-examples-lowlevel/api-tests/api-test-fts/: main.c
minimal-examples-lowlevel/api-tests/api-test-gencrypto/: CMakeLists.txt  lws-genaes.c  lws-genrsa.c  main.c
minimal-examples-lowlevel/api-tests/api-test-gendtls/: CMakeLists.txt  main.c
minimal-examples-lowlevel/api-tests/api-test-lws_struct-json/: main.c  test2.c
minimal-examples-lowlevel/api-tests/api-test-openhitls-acme-csr/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-cipher-map/: CMakeLists.txt  main.c
minimal-examples-lowlevel/api-tests/api-test-openhitls-eddsa/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-genaes/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-gendtls/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-genec/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-genhash/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-genrsa/: CMakeLists.txt
minimal-examples-lowlevel/api-tests/api-test-openhitls-session-dump/: CMakeLists.txt  main.c
minimal-examples-lowlevel/api-tests/api-test-x509-info/: main.c
minimal-examples-lowlevel/api-tests/api-test-x509-parse-abnormal/: cert.der
minimal-examples-lowlevel/api-tests/api-test-x509-verify/: main.c
minimal-examples-lowlevel/crypto/minimal-crypto-cose-key/: main.c
minimal-examples-lowlevel/crypto/minimal-crypto-cose-sign/: main.c
minimal-examples-lowlevel/crypto/minimal-crypto-jwe/: main.c
minimal-examples-lowlevel/crypto/minimal-crypto-x509/: main.c
minimal-examples-lowlevel/http-client/minimal-http-client/: minimal-http-client.c
minimal-examples-lowlevel/http-client/minimal-http-client-attach/: minimal-http-client-attach.c
minimal-examples-lowlevel/http-client/minimal-http-client-captive-portal/: minimal-http-client-captive-portal.c
minimal-examples-lowlevel/http-client/minimal-http-client-certinfo/: minimal-http-client-certinfo.c
minimal-examples-lowlevel/http-client/minimal-http-client-custom-headers/: minimal-http-client-custom-headers.c
minimal-examples-lowlevel/http-client/minimal-http-client-h2-rxflow/: minimal-http-client.c
minimal-examples-lowlevel/http-client/minimal-http-client-hugeurl/: minimal-http-client-hugeurl.c
minimal-examples-lowlevel/http-client/minimal-http-client-multi/: minimal-http-client-multi.c
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-certfail/: CMakeLists.txt  minimal-http-client-openhitls-certfail.c
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-https/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-mtls-file-positive/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-mtls-mem-positive/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-policy-override-positive/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-session/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-sni-multivhost-positive/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-openhitls-ssl-info-positive/: CMakeLists.txt
minimal-examples-lowlevel/http-client/minimal-http-client-post/: minimal-http-client-post.c
minimal-examples-lowlevel/http-client/minimal-http-client-post-form/: minimal-http-client-post-form.c
minimal-examples-lowlevel/http-server/minimal-http-server-openhitls-mtls-crl/: CMakeLists.txt  README.md
minimal-examples-lowlevel/http-server/minimal-http-server-openhitls-sni-mismatch/: CMakeLists.txt  README.md
minimal-examples-lowlevel/http-server/minimal-http-server-openhitls-tls13/: CMakeLists.txt  README.md
minimal-examples-lowlevel/http-server/minimal-http-server-tls/: minimal-http-server-tls.c
minimal-examples-lowlevel/secure-streams/minimal-secure-streams-avs/: main.c
minimal-examples-lowlevel/secure-streams/minimal-secure-streams-custom-client-transport/: private.h
minimal-examples-lowlevel/secure-streams/minimal-secure-streams-testsfail/: minimal-secure-streams-testsfail.c
minimal-examples-lowlevel/ws-client/minimal-ws-client-binance/: main.c
minimal-examples-lowlevel/ws-client/minimal-ws-client-openhitls-wss/: CMakeLists.txt
minimal-examples-lowlevel/ws-client/minimal-ws-client-ping/: minimal-ws-client-ping.c
minimal-examples-lowlevel/ws-client/minimal-ws-client-rx/: minimal-ws-client.c
plugins/: protocol_client_loopback_test.c  protocol_lws_raw_test.c
plugins/protocol_client_loopback_test/: protocol_client_loopback_test.c
plugins/protocol_lws_dht_dnssec_monitor/: protocol_lws_dht_dnssec_monitor.c
plugins/protocol_lws_raw_test/: protocol_lws_raw_test.c
plugins/protocol_lws_webrtc_mixer/: CMakeLists.txt
scripts/: build.sh  coverage-html.sh  ctest-background.sh  run-tests.sh
test-apps/: test-client.c
(+4 files in other folders)
